<?xml version="1.0"?>
<package format="2">
  <name>dynamic_transform_publisher</name>
  <version>0.0.0</version>
  <description>Dynamically adjust transform values during runtime</description>

  <maintainer email="john_tanguanzhong@hotmail.com">John Tan</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
